Alpha build is ready.
Framework to do base testing is complete.

--- a/Chameleon/Base.lproj/Main.storyboard
+++ b/Chameleon/Base.lproj/Main.storyboard
@@ -19,61 +19,79 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VnL-XM-ylv" userLabel="url">
-                                <rect key="frame" x="10" y="57" width="574" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="http://www.msn.com" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VnL-XM-ylv" userLabel="url">
+                                <rect key="frame" x="10" y="185" width="574" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter url to test :" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B8k-GX-FOl" userLabel="urlLabel">
-                                <rect key="frame" x="10" y="28" width="128" height="21"/>
+                                <rect key="frame" x="10" y="156" width="128" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="128" id="3dP-eV-HOS"/>
-                                    <constraint firstAttribute="height" constant="21" id="YVT-jc-efd"/>
+                                    <constraint firstAttribute="width" constant="128" id="8G0-Nz-qho"/>
+                                    <constraint firstAttribute="height" constant="21" id="r49-Qo-jsc"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Iterations count :" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RiK-rG-VBl" userLabel="iterationsLabel">
-                                <rect key="frame" x="10" y="100" width="130" height="21"/>
+                                <rect key="frame" x="10" y="255" width="130" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="cmx-TC-dOu"/>
-                                    <constraint firstAttribute="width" constant="130" id="ueK-Po-9ZX"/>
+                                    <constraint firstAttribute="height" constant="21" id="1gK-8l-5qq"/>
+                                    <constraint firstAttribute="width" constant="130" id="nHk-d6-T4O"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="El5-dS-zLE" userLabel="iterationsCount">
+                                <rect key="frame" x="10" y="288" width="574" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Page Load Analyzer" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8KQ-jC-Vwf">
+                                <rect key="frame" x="210" y="50" width="181" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="DEO-sv-w6c"/>
+                                    <constraint firstAttribute="width" constant="181" id="Do7-lo-Sex"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sPH-Ac-WV5" userLabel="startBtn">
-                                <rect key="frame" x="249" y="285" width="103" height="30"/>
-                                <state key="normal" title="Start Test Pass">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="224" y="459" width="152" height="38"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="152" id="GV9-GM-lNw"/>
+                                    <constraint firstAttribute="height" constant="38" id="eQF-DV-DHd"/>
+                                </constraints>
+                                <state key="normal" title="Start Analyzing...">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="startBtn:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Bsf-eY-JCL"/>
                                     <segue destination="l7F-wm-8Dn" kind="show" id="L5O-J8-8PN"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="El5-dS-zLE" userLabel="iterationsCount">
-                                <rect key="frame" x="10" y="141" width="574" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="sPH-Ac-WV5" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="0sl-gb-11v"/>
-                            <constraint firstItem="VnL-XM-ylv" firstAttribute="top" secondItem="B8k-GX-FOl" secondAttribute="bottom" constant="8" symbolic="YES" id="BBo-x3-kEp"/>
-                            <constraint firstItem="B8k-GX-FOl" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-6" id="Emo-Hg-yag"/>
-                            <constraint firstItem="RiK-rG-VBl" firstAttribute="leading" secondItem="El5-dS-zLE" secondAttribute="leading" id="JPX-0T-JOp"/>
-                            <constraint firstItem="El5-dS-zLE" firstAttribute="trailing" secondItem="VnL-XM-ylv" secondAttribute="trailing" id="T0t-OD-Q27"/>
-                            <constraint firstItem="sPH-Ac-WV5" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="W2F-71-79d"/>
-                            <constraint firstItem="RiK-rG-VBl" firstAttribute="top" secondItem="VnL-XM-ylv" secondAttribute="bottom" constant="13" id="a8E-4y-ASU"/>
-                            <constraint firstItem="B8k-GX-FOl" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="8" symbolic="YES" id="ezd-Jd-iGH"/>
-                            <constraint firstItem="El5-dS-zLE" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="iYo-Mv-Gqj"/>
-                            <constraint firstItem="El5-dS-zLE" firstAttribute="top" secondItem="RiK-rG-VBl" secondAttribute="bottom" constant="20" id="oFE-BS-i9S"/>
-                            <constraint firstItem="RiK-rG-VBl" firstAttribute="leading" secondItem="VnL-XM-ylv" secondAttribute="leading" id="uqD-Xf-hy8"/>
-                            <constraint firstItem="B8k-GX-FOl" firstAttribute="leading" secondItem="VnL-XM-ylv" secondAttribute="leading" id="xTt-pn-SRu"/>
+                            <constraint firstItem="B8k-GX-FOl" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="136" id="Cez-zW-a9f"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="sPH-Ac-WV5" secondAttribute="bottom" constant="103" id="El8-gd-6UG"/>
+                            <constraint firstItem="VnL-XM-ylv" firstAttribute="trailing" secondItem="El5-dS-zLE" secondAttribute="trailing" id="I53-af-zvG"/>
+                            <constraint firstItem="sPH-Ac-WV5" firstAttribute="centerX" secondItem="8KQ-jC-Vwf" secondAttribute="centerX" id="IL5-ME-S1Q"/>
+                            <constraint firstItem="El5-dS-zLE" firstAttribute="top" secondItem="RiK-rG-VBl" secondAttribute="bottom" constant="12" id="NUO-70-Bn6"/>
+                            <constraint firstItem="sPH-Ac-WV5" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="YmB-x7-T9c"/>
+                            <constraint firstItem="RiK-rG-VBl" firstAttribute="leading" secondItem="VnL-XM-ylv" secondAttribute="leading" id="aOm-hC-dti"/>
+                            <constraint firstItem="B8k-GX-FOl" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-6" id="bov-nn-i5t"/>
+                            <constraint firstItem="RiK-rG-VBl" firstAttribute="leading" secondItem="El5-dS-zLE" secondAttribute="leading" id="cZJ-1J-Cvq"/>
+                            <constraint firstItem="B8k-GX-FOl" firstAttribute="leading" secondItem="VnL-XM-ylv" secondAttribute="leading" id="daw-oA-54V"/>
+                            <constraint firstItem="RiK-rG-VBl" firstAttribute="top" secondItem="VnL-XM-ylv" secondAttribute="bottom" constant="40" id="hWw-c9-drY"/>
+                            <constraint firstItem="8KQ-jC-Vwf" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="30" id="oFh-fY-AbU"/>
+                            <constraint firstItem="VnL-XM-ylv" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="taA-5V-Vnf"/>
+                            <constraint firstItem="VnL-XM-ylv" firstAttribute="top" secondItem="B8k-GX-FOl" secondAttribute="bottom" constant="8" symbolic="YES" id="yTa-Ob-e1D"/>
                         </constraints>
                     </view>
                     <connections>
@@ -106,13 +124,14 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xX6-nS-in2">
-                                <rect key="frame" x="543" y="24" width="41" height="30"/>
-                                <state key="normal" title="Rerun">
+                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="viewReport" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xX6-nS-in2">
+                                <rect key="frame" x="500" y="24" width="84" height="30"/>
+                                <state key="normal" title="View Report">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="reRun:" destination="l7F-wm-8Dn" eventType="touchUpInside" id="lGW-q7-mpb"/>
+                                    <segue destination="NVh-er-Pij" kind="presentation" id="L93-rY-mGp"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -138,6 +157,54 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ge3-b3-b7U" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1239" y="333"/>
+        </scene>
+        <!--Report Controller-->
+        <scene sceneID="W6c-Vz-DFj">
+            <objects>
+                <viewController id="NVh-er-Pij" customClass="ReportController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cZd-mH-Pjt"/>
+                        <viewControllerLayoutGuide type="bottom" id="UNi-Nz-6eA"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Hx0-3u-5oq">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qfx-dV-cR1">
+                                <rect key="frame" x="0.0" y="62" width="600" height="538"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </webView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FYf-TY-URg">
+                                <rect key="frame" x="255" y="20" width="90" height="30"/>
+                                <state key="normal" title="Close Report">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="HWF-LS-fAz" kind="unwind" unwindAction="unwindToHomePage:" id="EMc-t7-DyS"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="qfx-dV-cR1" secondAttribute="trailing" id="8NG-Ih-UPd"/>
+                            <constraint firstItem="qfx-dV-cR1" firstAttribute="top" secondItem="FYf-TY-URg" secondAttribute="bottom" constant="12" id="W3g-xC-dWn"/>
+                            <constraint firstItem="qfx-dV-cR1" firstAttribute="centerX" secondItem="FYf-TY-URg" secondAttribute="centerX" id="YLw-qJ-GFp"/>
+                            <constraint firstItem="FYf-TY-URg" firstAttribute="top" secondItem="cZd-mH-Pjt" secondAttribute="bottom" id="lxg-Rf-96M"/>
+                            <constraint firstItem="qfx-dV-cR1" firstAttribute="bottom" secondItem="UNi-Nz-6eA" secondAttribute="top" id="sLR-dY-ugH"/>
+                            <constraint firstItem="qfx-dV-cR1" firstAttribute="leading" secondItem="Hx0-3u-5oq" secondAttribute="leading" id="uGg-ue-VKV"/>
+                        </constraints>
+                    </view>
+                    <toolbarItems/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="reportView" destination="qfx-dV-cR1" id="kyA-TE-env"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ha1-ys-Uz0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="HWF-LS-fAz" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1938" y="351"/>
         </scene>
     </scenes>
 </document>
